--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.wsm.design.pattern</groupId>
     <artifactId>design-pattern</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
